# branchwater

./: .dockerignore  .envrc  .gitignore  .readthedocs.yml  Cargo.toml  Dockerfile  Dockerfile.index  FileTree.md  Makefile  README.md  acc.py  bigquery.py  bqtomongo.py  compose.yml  deny.toml  dist-workspace.toml  docker-compose.debug.yml  docker-compose.yml  flake.nix  main.py  mongoquery.py  pixi.toml  prod.env  prod.index.env  pyproject.toml  release-please-config.json  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: branchwater-web.md
.github/workflows/: ci.yml  conventional-prs.yml  docker-images.yml  release-please.yml  v-release.yml
app/: Dockerfile  README.md  bqtomongo.py  config.yml  docker-compose.debug.yml  docker-compose.yml  environment.yml  functions.py  main.py
app/static/: attrcounts_4.5percent_manualcategories.csv  dashboard.js  ex_sig.js  fetchandplot.js  formdata.js  forms.js  metadata_table.js  plotly-bw.min.js  testdash.js
app/static/mgnify-component/: 225.mgnify-sourmash-component.worker.js  225.mgnify-sourmash-component.worker.js.map  517.mgnify-sourmash-component.worker.js  517.mgnify-sourmash-component.worker.js.map  646.mgnify-sourmash-component.worker.js  646.mgnify-sourmash-component.worker.js.map  index.d.ts  index.html  mgnify-sourmash-component.js  mgnify-sourmash-component.js.map  mgnify-sourmash-component.worker.js  mgnify-sourmash-component.worker.js.map  sketcher.worker.d.ts
app/templates/: about.html  advanced.html  base.html  contact.html  dashboard.js  data_analysis.html  examples.html  faq.md  footer.html  header.html  index.html  script.js  test.md
branchwater-web_MAGtest/: multispecies_notes.md  multispecies_tracking.xlsx
branchwater-web_MAGtest/nfcore/MAG/: nextflow.config  paths_PE.csv  paths_SE.csv  software_versions.yml
branchwater-web_MAGtest/nfcore/fetchNGS/: multispeciessra.csv  nextflow.config
branchwater-web_MAGtest/sendsketch/multi/: Acanthamoeba.txt  Aspergillus.txt  Candida.txt  Cryptosporidium.txt  Folsomia.txt  bins.txt  multi_mapping.csv  multi_ss.sh  multinames.txt  other.txt  output.txt  sendsketch.md  sort.txt
buildmongo/: Dockerfile  README.md  attrcounts_4.5percent.csv  bqtomongo.py  config.yml  subset_columns.py
crates/client/: Cargo.toml  README.md
crates/client/src/: main.rs
crates/index/: Cargo.toml
crates/index/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
dashapp/: dash_meta.py
deploy/: configuration-aarch64.nix  configuration.nix  flake.nix
docs/: conf.py  deploy.md  index.md  large_db.md  requirements.txt
experiments/: Snakefile
experiments/inputs/: demo_runinfo.csv  demo_sraids
metadata/: README.md  load_duckdb.py  load_duckdb.sql  load_parquet.py  prepare_bq.py  prepare_sra.py
metadata_prep/: README.MD  attrcounts.csv  attrcounts_4.5percent_manualcategories.csv  attributeList.csv  count_attr.py  createform.py
mongo_db/: bqtomongo.py
templates/: grid.html  index.html  index2.html
