[workspace]
members = ["crates/*"]
default-members = ["crates/server"]
resolver = "2"

[workspace.package]
version = "0.1.2-rc1"
name = "branchwater"

[workspace.dependencies]
camino = "1.1.6"
clap = { version = "3.2.8", features = [ "derive" ] }
color-eyre = "0.6.2"
csv = "1.3.0"
env_logger = "0.9.0"
histogram = "0.9.1"
log = "0.4.22"
needletail = "0.4.1"
niffler = { version = "2.4.0", default-features = false, features = [ "gz" ]}
numsep = "0.1.12"
reqwest = { version = "0.11.11", default-features = false, features = [ "blocking", "rustls-tls" ] }
size = "0.4.0"
sourmash = { version = "0.15.1" }

serde_json = "1.0.113"
# axum deps
axum = { version = "0.5", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.0", features = ["add-extension", "compression-full", "trace", "fs"] }
# observability
sentry = { version = "0.31.0", default-features = false, features = ["reqwest", "rustls", "backtrace", "contexts", "panic", "profiling", "tracing", "tower", "tower-http"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = true
# A prefix git tags must include for cargo-dist to care about them
tag-namespace = "v"

[profile.release]
#debug = 2
#lto = true # Enable link-time optimization

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not our code
[profile.dev.package."*"]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
