[workspace]
members = ["crates/*"]
default-members = ["crates/server"]
resolver = "2"

[workspace.package]
version = "0.3.0"
name = "branchwater"

[workspace.dependencies]
camino = "1.1.6"
clap = { version = "4.5.28", features = [ "derive" ] }
color-eyre = "0.6.2"
csv = "1.3.0"
needletail = "0.6.0"
niffler = { version = "2.7.0", default-features = false, features = [ "gz" ]}
numsep = "0.1.12"
reqwest = { version = "0.12.9", default-features = false, features = [ "json", "rustls-tls" ] }
reqwest-retry = "0.7.0"
reqwest-middleware = { version = "0.4.0", features = [ "json" ] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
size = "0.4.0"
sourmash = { version = "0.18.0" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# axum deps
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.6", features = ["add-extension", "compression-full", "trace", "fs", "limit"] }
# observability
sentry = { version = "0.36.0", default-features = false, features = ["reqwest", "rustls", "backtrace", "contexts", "panic", "tracing", "tower", "tower-http"] }

[profile.release]
#debug = 2
#lto = true # Enable link-time optimization

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not our code
[profile.dev.package."*"]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
