[package]
name = "branchwater-client"
version.workspace = true
edition = "2021"
license = "AGPL"
repository = "https://github.com/sourmash-bio/branchwater"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
color-eyre.workspace = true
csv.workspace = true
needletail.workspace = true
niffler.workspace = true
reqwest.workspace = true
reqwest-retry.workspace = true
reqwest-middleware.workspace = true
sourmash.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true

[target.'cfg(target_env = "musl")'.dependencies.jemallocator]
version = "0.5.0"
