[package]
name = "branchwater-index"
version.workspace = true
edition = "2021"
license = "AGPL"
repository = "https://github.com/sourmash-bio/branchwater"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino.workspace = true
clap.workspace = true
color-eyre.workspace = true
csv.workspace = true
numsep.workspace = true
rayon.workspace = true
size.workspace = true
sourmash = { workspace = true, features = ["branchwater"] }
tracing.workspace = true
tracing-subscriber.workspace = true
