[package]
name = "branchwater-server"
version.workspace = true
edition = "2021"
license = "AGPL"
repository = "https://github.com/sourmash-bio/branchwater"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino.workspace = true
clap.workspace = true
csv.workspace = true
color-eyre.workspace = true
sourmash = { workspace = true, features = ["branchwater"] }
serde.workspace = true
serde_json.workspace = true

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
sentry.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
